[package]
name = "qs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = {version = "1.49.0", features = ["full"]}
bytes = "1.11.0"
derive_more = {version = "2.1.1",features = ["full"]}
parking_lot = "0.12.5"
quinn-proto = "0.11.13"
quinn-plaintext = "0.3.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
console-subscriber = "0.5.0"
dashmap = "7.0.0-rc2"
crossbeam = "0.8.4"

[profile.release]
debug = true  # 关键！保留函数名符号，但不影响优化等级
strip = false # 不要剔除符号