[package]
name = "qs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bandwidth"
path = "src/bin/bandwidth.rs"

[[bin]]
name = "proxy"
path = "src/bin/proxy.rs"

[dependencies]
tokio = { version = "1.49.0", features = ["full"] }
bytes = "1.11.0"
derive_more = { version = "2.1.1", features = ["full"] }
parking_lot = "0.12.5"
anyhow = "1.0.100"
quinn-proto = "0.11.13"
quinn-plaintext = "0.3.0"
tracing = "0.1.44"
futures = "0.3.31"
tokio-util = "0.7.18"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
log = "0.4.29"
clap = { version = "4.5.54", features = ["derive"] }
quinn = {version = "0.11.9", features = ["qlog"]}
rcgen = "0.14.6"
rustls = "0.23.36"
indicatif = "0.18.3"
tun = { version = "0.8.5", features = ["async"] }
netstack-smoltcp = { path = "netstack-smoltcp" }
chrono = "0.4.43"
rand = "0.10.0-rc.6"
once_cell = "1.21.3"
dashmap = "7.0.0-rc2"

[profile.release]
debug = true  # 关键！保留函数名符号，但不影响优化等级
strip = false # 不要剔除符号